<resources>
    <string name="app_name">DanBamMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KhoaNV24</string>
    <string name="nav_header_subtitle">KhoaNV24@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_my_cart">My Cart</string>
    <string name="menu_my_order">My Order</string>
    <string name="menu_new_products">New Products</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_category">Category</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="rating_value">5.0</string>
    <string name="ProjectName">Welcome to DanBam</string>
    <string name="login">Login</string>

</resources>