<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offer"
            android:title="@string/menu_offers" />
        <item
            android:id="@+id/nav_new_products"
            android:icon="@drawable/ic_new_products"
            android:title="@string/menu_new_products" />
        <item
            android:id="@+id/nav_my_order"
            android:icon="@drawable/ic_my_cart"
            android:title="@string/menu_my_order" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_my_order"
            android:title="@string/menu_my_cart" />
    </group>
</menu>