<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.danbammobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.danbammobile.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.danbammobile.ui.Profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.danbammobile.ui.Offers.OffersFragment"
        android:label="@string/menu_offers"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/nav_new_products"
        android:name="com.example.danbammobile.ui.NewProduct.NewProductFragment"
        android:label="@string/menu_new_products"
        tools:layout="@layout/fragment_new_product" />
    <fragment
        android:id="@+id/nav_my_order"
        android:name="com.example.danbammobile.ui.Order.OrderFragment"
        android:label="@string/menu_my_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.danbammobile.ui.MyCart.MyCartFragment"
        android:label="@string/menu_my_cart"
        tools:layout="@layout/fragment_my_cart" />

</navigation>